fix: address review findings in backends, sessions, and adapters