@@ -7,20 +7,31 @@ import com.memo.docrank.core.model.ChunkWithVectors;
 import com.memo.docrank.core.model.Language;
 import com.memo.docrank.core.model.RecallCandidate;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.*;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 /**
- * LanceDB HTTP 后端
- * 依赖本地运行的 LanceDB 服务（默认端口 8181）
- *
- * 启动方式：pip install lancedb && lancedb --host 0.0.0.0 --port 8181
+ * LanceDB HTTP backend.
  */
 @Slf4j
 public class LanceDBBackend implements IndexBackend {
+
+    private static final Set<String> ALLOWED_FILTER_FIELDS = Set.of(
+            "chunk_id", "doc_id", "title", "section_path", "chunk_text",
+            "chunk_index", "language", "updated_at", "importance", "expires_at"
+    );
 
     private final String baseUrl;
     private final String tableName;
@@ -29,24 +40,21 @@ public class LanceDBBackend implements IndexBackend {
     private final ObjectMapper mapper;
 
     public LanceDBBackend(String host, int port, String tableName, int vectorDim) {
-        this.baseUrl   = "http://" + host + ":" + port;
+        this.baseUrl = "http://" + host + ":" + port;
         this.tableName = tableName;
         this.vectorDim = vectorDim;
-        this.http      = new RestTemplate();
-        this.mapper    = new ObjectMapper();
+        this.http = new RestTemplate();
+        this.mapper = new ObjectMapper();
     }
-
-    // ---------------------------------------------------------------- 索引管理
 
     @Override
     public void createIndex() {
         try {
             String url = baseUrl + "/v1/table/" + tableName + "/create/";
-            Map<String, Object> schema = buildSchema();
-            post(url, schema);
-            log.info("LanceDB 表 '{}' 创建成功", tableName);
+            post(url, buildSchema());
+            log.info("LanceDB table '{}' created", tableName);
         } catch (Exception e) {
-            log.warn("LanceDB 表创建失败（可能已存在）: {}", e.getMessage());
+            log.warn("LanceDB table create failed (maybe already exists): {}", e.getMessage());
         }
     }
 
@@ -55,56 +63,64 @@ public class LanceDBBackend implements IndexBackend {
         try {
             String url = baseUrl + "/v1/table/" + tableName + "/";
             http.delete(url);
-            log.info("LanceDB 表 '{}' 已删除", tableName);
+            log.info("LanceDB table '{}' deleted", tableName);
         } catch (Exception e) {
-            log.warn("LanceDB 表删除失败: {}", e.getMessage());
+            log.warn("LanceDB table delete failed: {}", e.getMessage());
         }
     }
 
-    // --------------------------------------------------------------- 文档写入
-
     @Override
     public void upsertChunks(List<ChunkWithVectors> chunks) {
-        if (chunks.isEmpty()) return;
-        List<Map<String, Object>> rows = chunks.stream()
-                .map(this::toRow)
+        if (chunks == null || chunks.isEmpty()) {
+            return;
+        }
+
+        // Simulate upsert safely: delete existing chunk_id rows, then append incoming rows.
+        List<String> chunkIds = chunks.stream()
+                .map(cwv -> cwv.getChunk() != null ? cwv.getChunk().getChunkId() : null)
+                .filter(id -> id != null && !id.isBlank())
+                .collect(java.util.stream.Collectors.toCollection(LinkedHashSet::new))
+                .stream()
                 .toList();
+        if (!chunkIds.isEmpty()) {
+            deleteByPredicate(buildOrEqualsPredicate("chunk_id", chunkIds));
+        }
+
+        List<Map<String, Object>> rows = chunks.stream().map(this::toRow).toList();
         String url = baseUrl + "/v1/table/" + tableName + "/insert/";
-        post(url, Map.of("data", rows, "mode", "overwrite"));
-        log.debug("LanceDB upsert {} 条记录", chunks.size());
+        post(url, Map.of("data", rows, "mode", "append"));
+        log.debug("LanceDB upsert {} rows", chunks.size());
     }
 
     @Override
     public void deleteByDocId(String docId) {
-        String url = baseUrl + "/v1/table/" + tableName + "/delete/";
-        post(url, Map.of("predicate", "doc_id = '" + docId + "'"));
+        deleteByPredicate(buildEqualsPredicate("doc_id", docId));
     }
 
-    // ------------------------------------------------------------------ 检索
-
     @Override
-    public List<RecallCandidate> keywordSearch(String query, int topK,
-                                                Map<String, Object> filters) {
+    public List<RecallCandidate> keywordSearch(String query, int topK, Map<String, Object> filters) {
         try {
             String url = baseUrl + "/v1/table/" + tableName + "/query/";
             Map<String, Object> body = new LinkedHashMap<>();
             body.put("query", query);
             body.put("query_type", "fts");
             body.put("limit", topK);
-            if (filters != null && !filters.isEmpty()) {
-                body.put("filter", buildFilter(filters));
+
+            String filterExpr = buildFilter(filters);
+            if (!filterExpr.isBlank()) {
+                body.put("filter", filterExpr);
             }
+
             String resp = post(url, body);
             return parseResults(resp, RecallCandidate.RecallSource.KEYWORD);
         } catch (Exception e) {
-            log.error("LanceDB 关键词检索失败: {}", e.getMessage());
+            log.error("LanceDB keyword search failed: {}", e.getMessage());
             return List.of();
         }
     }
 
     @Override
-    public List<RecallCandidate> vectorSearch(float[] queryVector, int topK,
-                                               Map<String, Object> filters) {
+    public List<RecallCandidate> vectorSearch(float[] queryVector, int topK, Map<String, Object> filters) {
         try {
             String url = baseUrl + "/v1/table/" + tableName + "/query/";
             Map<String, Object> body = new LinkedHashMap<>();
@@ -112,18 +128,19 @@ public class LanceDBBackend implements IndexBackend {
             body.put("query_type", "vector");
             body.put("limit", topK);
             body.put("metric", "cosine");
-            if (filters != null && !filters.isEmpty()) {
-                body.put("filter", buildFilter(filters));
+
+            String filterExpr = buildFilter(filters);
+            if (!filterExpr.isBlank()) {
+                body.put("filter", filterExpr);
             }
+
             String resp = post(url, body);
             return parseResults(resp, RecallCandidate.RecallSource.VECTOR);
         } catch (Exception e) {
-            log.error("LanceDB 向量检索失败: {}", e.getMessage());
+            log.error("LanceDB vector search failed: {}", e.getMessage());
             return List.of();
         }
     }
-
-    // ------------------------------------------------------------------- 状态
 
     @Override
     public boolean isHealthy() {
@@ -155,39 +172,38 @@ public class LanceDBBackend implements IndexBackend {
             body.put("query_type", "scan");
             body.put("limit", limit);
             body.put("offset", offset);
+
             String resp = post(url, body);
             List<RecallCandidate> candidates = parseResults(resp, RecallCandidate.RecallSource.VECTOR);
-            return candidates.stream()
-                    .map(RecallCandidate::getChunk)
-                    .collect(java.util.stream.Collectors.toList());
+            return candidates.stream().map(RecallCandidate::getChunk).toList();
         } catch (Exception e) {
-            log.error("LanceDB listAllChunks 失败: {}", e.getMessage());
+            log.error("LanceDB listAllChunks failed: {}", e.getMessage());
             return List.of();
         }
     }
 
-    // ----------------------------------------------------------------- private
-
     private Map<String, Object> buildSchema() {
         List<Map<String, Object>> fields = new ArrayList<>();
-        fields.add(field("chunk_id",    "utf8",    true));
-        fields.add(field("doc_id",      "utf8",    false));
-        fields.add(field("title",       "utf8",    false));
-        fields.add(field("section_path","utf8",    false));
-        fields.add(field("chunk_text",  "utf8",    false));
-        fields.add(field("chunk_index", "int32",   false));
-        fields.add(field("language",    "utf8",    false));
-        fields.add(field("updated_at",  "utf8",    false));
-        fields.add(field("importance",  "float64", false));
-        fields.add(field("expires_at",  "utf8",    true));
-        // vec_chunk: float32[vectorDim]
+        fields.add(field("chunk_id", "utf8", true));
+        fields.add(field("doc_id", "utf8", false));
+        fields.add(field("title", "utf8", false));
+        fields.add(field("section_path", "utf8", false));
+        fields.add(field("chunk_text", "utf8", false));
+        fields.add(field("chunk_index", "int32", false));
+        fields.add(field("language", "utf8", false));
+        fields.add(field("updated_at", "utf8", false));
+        fields.add(field("importance", "float64", false));
+        fields.add(field("expires_at", "utf8", true));
+
         Map<String, Object> vecField = new LinkedHashMap<>();
         vecField.put("name", "vec_chunk");
-        vecField.put("type", Map.of("type", "fixed_size_list",
+        vecField.put("type", Map.of(
+                "type", "fixed_size_list",
                 "child", Map.of("type", "float32"),
                 "list_size", vectorDim));
         vecField.put("nullable", false);
         fields.add(vecField);
+
         return Map.of("schema", Map.of("fields", fields));
     }
 
@@ -202,23 +218,25 @@ public class LanceDBBackend implements IndexBackend {
     private Map<String, Object> toRow(ChunkWithVectors cwv) {
         Chunk c = cwv.getChunk();
         Map<String, Object> row = new LinkedHashMap<>();
-        row.put("chunk_id",     c.getChunkId());
-        row.put("doc_id",       c.getDocId());
-        row.put("title",        c.getTitle() != null ? c.getTitle() : "");
+        row.put("chunk_id", c.getChunkId());
+        row.put("doc_id", c.getDocId());
+        row.put("title", c.getTitle() != null ? c.getTitle() : "");
         row.put("section_path", c.getSectionPath() != null ? c.getSectionPath() : "");
-        row.put("chunk_text",   c.getChunkText() != null ? c.getChunkText() : "");
-        row.put("chunk_index",  c.getChunkIndex());
-        row.put("language",     c.getLanguage() != null ? c.getLanguage().name() : Language.UNKNOWN.name());
-        row.put("updated_at",   c.getUpdatedAt() != null ? c.getUpdatedAt().toString() : "");
-        row.put("importance",   c.getImportance());
-        row.put("expires_at",   c.getExpiresAt() != null ? c.getExpiresAt().toString() : null);
-        row.put("vec_chunk",    toList(cwv.getVecChunk()));
+        row.put("chunk_text", c.getChunkText() != null ? c.getChunkText() : "");
+        row.put("chunk_index", c.getChunkIndex());
+        row.put("language", c.getLanguage() != null ? c.getLanguage().name() : Language.UNKNOWN.name());
+        row.put("updated_at", c.getUpdatedAt() != null ? c.getUpdatedAt().toString() : "");
+        row.put("importance", c.getImportance());
+        row.put("expires_at", c.getExpiresAt() != null ? c.getExpiresAt().toString() : null);
+        row.put("vec_chunk", toList(cwv.getVecChunk()));
         return row;
     }
 
     private List<Float> toList(float[] arr) {
         List<Float> list = new ArrayList<>(arr.length);
-        for (float v : arr) list.add(v);
+        for (float v : arr) {
+            list.add(v);
+        }
         return list;
     }
 
@@ -226,18 +244,98 @@ public class LanceDBBackend implements IndexBackend {
         return src != null ? src : List.of();
     }
 
+    private void deleteByPredicate(String predicate) {
+        if (predicate == null || predicate.isBlank()) {
+            return;
+        }
+        String url = baseUrl + "/v1/table/" + tableName + "/delete/";
+        post(url, Map.of("predicate", predicate));
+    }
+
     private String buildFilter(Map<String, Object> filters) {
+        if (filters == null || filters.isEmpty()) {
+            return "";
+        }
+
         List<String> parts = new ArrayList<>();
-        filters.forEach((k, v) -> parts.add(k + " = '" + v + "'"));
+        filters.forEach((key, value) -> {
+            String normalized = normalizeFilterField(key);
+            if (normalized == null) {
+                return;
+            }
+            String clause = buildClause(normalized, value);
+            if (clause != null && !clause.isBlank()) {
+                parts.add(clause);
+            }
+        });
+
         return String.join(" AND ", parts);
     }
 
-    private List<RecallCandidate> parseResults(String json,
-                                                RecallCandidate.RecallSource source) {
+    private String normalizeFilterField(String field) {
+        if (field == null || field.isBlank()) {
+            return null;
+        }
+        String normalized = field.trim().toLowerCase();
+        if (!ALLOWED_FILTER_FIELDS.contains(normalized)) {
+            log.debug("Ignore unsupported LanceDB filter field: {}", field);
+            return null;
+        }
+        return normalized;
+    }
+
+    private String buildClause(String field, Object value) {
+        if (value instanceof List<?> list) {
+            List<String> clauses = list.stream()
+                    .map(v -> buildEqualsPredicate(field, v))
+                    .filter(c -> c != null && !c.isBlank())
+                    .toList();
+            if (clauses.isEmpty()) {
+                return "";
+            }
+            return clauses.size() == 1 ? clauses.get(0) : "(" + String.join(" OR ", clauses) + ")";
+        }
+        return buildEqualsPredicate(field, value);
+    }
+
+    private String buildOrEqualsPredicate(String field, List<String> values) {
+        if (values == null || values.isEmpty()) {
+            return "";
+        }
+        List<String> clauses = values.stream()
+                .map(v -> buildEqualsPredicate(field, v))
+                .filter(c -> c != null && !c.isBlank())
+                .toList();
+        if (clauses.isEmpty()) {
+            return "";
+        }
+        return clauses.size() == 1 ? clauses.get(0) : "(" + String.join(" OR ", clauses) + ")";
+    }
+
+    private String buildEqualsPredicate(String field, Object value) {
+        if (value == null) {
+            return field + " IS NULL";
+        }
+        if (value instanceof Number || value instanceof Boolean) {
+            return field + " = " + value;
+        }
+        return field + " = '" + escapeLiteral(String.valueOf(value)) + "'";
+    }
+
+    private String escapeLiteral(String raw) {
+        return raw.replace("'", "''");
+    }
+
+    private List<RecallCandidate> parseResults(String json, RecallCandidate.RecallSource source) {
         try {
             JsonNode root = mapper.readTree(json);
+            JsonNode rows = root.isArray() ? root : root.path("data");
+            if (!rows.isArray()) {
+                return List.of();
+            }
+
             List<RecallCandidate> results = new ArrayList<>();
-            for (JsonNode row : root) {
+            for (JsonNode row : rows) {
                 Chunk chunk = Chunk.builder()
                         .chunkId(row.path("chunk_id").asText())
                         .docId(row.path("doc_id").asText())
@@ -250,31 +348,37 @@ public class LanceDBBackend implements IndexBackend {
                         .importance(row.path("importance").asDouble(1.0))
                         .expiresAt(parseInstant(row.path("expires_at").asText()))
                         .build();
-                double score = row.path("_relevance_score").asDouble(
-                        row.path("_distance").asDouble(0.0));
-                results.add(RecallCandidate.builder()
-                        .chunk(chunk).score(score).source(source).build());
+
+                double score = row.path("_relevance_score").asDouble(row.path("_distance").asDouble(0.0));
+                results.add(RecallCandidate.builder().chunk(chunk).score(score).source(source).build());
             }
             return results;
         } catch (Exception e) {
-            log.error("解析 LanceDB 响应失败: {}", e.getMessage());
+            log.error("Parse LanceDB response failed: {}", e.getMessage());
             return List.of();
         }
     }
 
     private Language parseLanguage(String s) {
-        try { return Language.valueOf(s); } catch (Exception e) { return Language.UNKNOWN; }
+        try {
+            return Language.valueOf(s);
+        } catch (Exception e) {
+            return Language.UNKNOWN;
+        }
     }
 
     private Instant parseInstant(String s) {
-        try { return Instant.parse(s); } catch (Exception e) { return null; }
+        try {
+            return Instant.parse(s);
+        } catch (Exception e) {
+            return null;
+        }
     }
 
     private String post(String url, Object body) {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
-        ResponseEntity<String> resp = http.exchange(
-                url, HttpMethod.POST, new HttpEntity<>(body, headers), String.class);
+        ResponseEntity<String> resp = http.exchange(url, HttpMethod.POST, new HttpEntity<>(body, headers), String.class);
         return resp.getBody();
     }
 }
