@@ -12,51 +12,39 @@ import org.springframework.ai.vectorstore.SearchRequest;
 import org.springframework.ai.vectorstore.VectorStore;
 
 import java.time.Instant;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.UUID;
 
 /**
  * DocRank implementation of Spring AI {@link VectorStore}.
- *
- * <p>Stores Spring AI {@link Document}s in DocRank's vector + BM25 backends,
- * supporting full hybrid retrieval (BM25 + vector + RRF + rerank).</p>
- *
- * <pre>{@code
- * @Bean
- * VectorStore vectorStore(EmbeddingModel embeddingModel,
- *                          IndexBackend vectorBackend,
- *                          BM25Index bm25Index) {
- *     return DocRankVectorStore.builder()
- *             .embeddingModel(embeddingModel)
- *             .vectorBackend(vectorBackend)
- *             .bm25Index(bm25Index)
- *             .build();
- * }
- * }</pre>
  */
 @Slf4j
 public class DocRankVectorStore implements VectorStore {
 
     private final EmbeddingModel embeddingModel;
-    private final IndexBackend   vectorBackend;
-    private final BM25Index      bm25Index;
+    private final IndexBackend vectorBackend;
+    private final BM25Index bm25Index;
 
     private DocRankVectorStore(Builder builder) {
         this.embeddingModel = Objects.requireNonNull(builder.embeddingModel, "embeddingModel is required");
-        this.vectorBackend  = Objects.requireNonNull(builder.vectorBackend,  "vectorBackend is required");
-        this.bm25Index      = builder.bm25Index;
+        this.vectorBackend = Objects.requireNonNull(builder.vectorBackend, "vectorBackend is required");
+        this.bm25Index = builder.bm25Index;
     }
-
-    // ----------------------------------------------------------- VectorStore API
 
     @Override
     public void add(List<Document> documents) {
-        if (documents.isEmpty()) return;
+        if (documents.isEmpty()) {
+            return;
+        }
 
-        // 批量向量化
         List<float[]> vectors = documents.stream()
-                .map(d -> toFloatArray(embeddingModel.embed(d.getFormattedContent())))
-                .collect(Collectors.toList());
+                .map(d -> embeddingModel.embed(d.getFormattedContent()))
+                .toList();
 
         List<ChunkWithVectors> batch = new ArrayList<>(documents.size());
         List<Chunk> chunks = new ArrayList<>(documents.size());
@@ -68,7 +56,9 @@ public class DocRankVectorStore implements VectorStore {
         }
 
         vectorBackend.upsertChunks(batch);
-        if (bm25Index != null) bm25Index.addChunks(chunks);
+        if (bm25Index != null) {
+            bm25Index.addChunks(chunks);
+        }
         log.debug("DocRankVectorStore: added {} documents", documents.size());
     }
 
@@ -76,8 +66,13 @@ public class DocRankVectorStore implements VectorStore {
     public Optional<Boolean> delete(List<String> idList) {
         try {
             for (String id : idList) {
+                if (id == null || id.isBlank()) {
+                    continue;
+                }
                 vectorBackend.deleteByDocId(id);
-                if (bm25Index != null) bm25Index.deleteByDocId(id);
+                if (bm25Index != null) {
+                    bm25Index.deleteByDocId(id);
+                }
             }
             return Optional.of(true);
         } catch (Exception e) {
@@ -88,56 +83,60 @@ public class DocRankVectorStore implements VectorStore {
 
     @Override
     public List<Document> similaritySearch(SearchRequest request) {
-        float[] queryVec = toFloatArray(embeddingModel.embed(request.getQuery()));
+        float[] queryVec = embeddingModel.embed(request.getQuery());
         int topK = request.getTopK();
         double threshold = request.getSimilarityThreshold();
 
-        Map<String, Object> filters = new LinkedHashMap<>();
-
-        List<RecallCandidate> candidates = vectorBackend.vectorSearch(queryVec, topK, filters);
+        List<RecallCandidate> candidates = vectorBackend.vectorSearch(queryVec, topK, new LinkedHashMap<>());
 
         return candidates.stream()
                 .filter(c -> c.getScore() >= threshold)
                 .map(c -> chunkToDocument(c.getChunk(), c.getScore()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ----------------------------------------------------------- Builder
-
-    public static Builder builder() { return new Builder(); }
+    public static Builder builder() {
+        return new Builder();
+    }
 
     public static class Builder {
         private EmbeddingModel embeddingModel;
-        private IndexBackend   vectorBackend;
-        private BM25Index      bm25Index;
+        private IndexBackend vectorBackend;
+        private BM25Index bm25Index;
 
         public Builder embeddingModel(EmbeddingModel embeddingModel) {
-            this.embeddingModel = embeddingModel; return this;
+            this.embeddingModel = embeddingModel;
+            return this;
         }
+
         public Builder vectorBackend(IndexBackend vectorBackend) {
-            this.vectorBackend = vectorBackend; return this;
+            this.vectorBackend = vectorBackend;
+            return this;
         }
+
         public Builder bm25Index(BM25Index bm25Index) {
-            this.bm25Index = bm25Index; return this;
+            this.bm25Index = bm25Index;
+            return this;
         }
+
         public DocRankVectorStore build() {
             return new DocRankVectorStore(this);
         }
     }
 
-    // ----------------------------------------------------------- private helpers
-
     private Chunk documentToChunk(Document doc) {
         Map<String, Object> meta = doc.getMetadata();
-        String id        = doc.getId() != null ? doc.getId() : UUID.randomUUID().toString();
-        String docId     = getStr(meta, "doc_id",  id);
-        String title     = getStr(meta, "title",   "");
-        String section   = getStr(meta, "section", "");
+        String id = doc.getId() != null ? doc.getId() : UUID.randomUUID().toString();
+        String docId = getStr(meta, "doc_id", id);
+        String title = getStr(meta, "title", "");
+        String section = getStr(meta, "section", "");
         double importance = getDouble(meta, "importance", 1.0);
 
         return Chunk.builder()
-                .chunkId(id).docId(docId)
-                .title(title).sectionPath(section)
+                .chunkId(id)
+                .docId(docId)
+                .title(title)
+                .sectionPath(section)
                 .chunkText(doc.getFormattedContent())
                 .importance(importance)
                 .updatedAt(Instant.now())
@@ -146,28 +145,45 @@ public class DocRankVectorStore implements VectorStore {
 
     private Document chunkToDocument(Chunk chunk, double score) {
         Map<String, Object> meta = new LinkedHashMap<>();
-        meta.put("doc_id",     chunk.getDocId()      != null ? chunk.getDocId()      : "");
-        meta.put("title",      chunk.getTitle()       != null ? chunk.getTitle()      : "");
-        meta.put("section",    chunk.getSectionPath() != null ? chunk.getSectionPath(): "");
-        meta.put("importance", chunk.getImportance());
-        meta.put("score",      score);
-        if (chunk.getUpdatedAt() != null) meta.put("updated_at", chunk.getUpdatedAt().toString());
+        String docId = chunk.getDocId() != null ? chunk.getDocId() : "";
+        String chunkId = chunk.getChunkId() != null ? chunk.getChunkId() : "";
 
-        Document doc = new Document(chunk.getChunkText() != null ? chunk.getChunkText() : "", meta);
-        // Set the same id so delete() can target this doc later
-        return doc;
+        meta.put("doc_id", docId);
+        meta.put("chunk_id", chunkId);
+        meta.put("title", chunk.getTitle() != null ? chunk.getTitle() : "");
+        meta.put("section", chunk.getSectionPath() != null ? chunk.getSectionPath() : "");
+        meta.put("importance", chunk.getImportance());
+        meta.put("score", score);
+        if (chunk.getUpdatedAt() != null) {
+            meta.put("updated_at", chunk.getUpdatedAt().toString());
+        }
+
+        String deleteId = !docId.isBlank() ? docId : chunkId;
+        meta.put("delete_id", deleteId);
+
+        String text = chunk.getChunkText() != null ? chunk.getChunkText() : "";
+        return createDocumentWithId(deleteId, text, meta);
+    }
+
+    private Document createDocumentWithId(String id, String text, Map<String, Object> metadata) {
+        if (id == null || id.isBlank()) {
+            return new Document(text, metadata);
+        }
+        try {
+            java.lang.reflect.Constructor<Document> ctor =
+                    Document.class.getConstructor(String.class, String.class, Map.class);
+            return ctor.newInstance(id, text, metadata);
+        } catch (ReflectiveOperationException e) {
+            return new Document(text, metadata);
+        }
     }
 
     private ChunkWithVectors toChunkWithVectors(Chunk chunk, float[] vector) {
         List<Float> vec = new ArrayList<>(vector.length);
-        for (float v : vector) vec.add(v);
+        for (float v : vector) {
+            vec.add(v);
+        }
         return ChunkWithVectors.builder().chunk(chunk).vecChunk(vec).build();
-    }
-
-    private float[] toFloatArray(List<Double> doubles) {
-        float[] arr = new float[doubles.size()];
-        for (int i = 0; i < doubles.size(); i++) arr[i] = doubles.get(i).floatValue();
-        return arr;
     }
 
     private String getStr(Map<String, Object> meta, String key, String def) {
@@ -177,11 +193,16 @@ public class DocRankVectorStore implements VectorStore {
 
     private double getDouble(Map<String, Object> meta, String key, double def) {
         Object v = meta.get(key);
-        if (v instanceof Number n) return n.doubleValue();
+        if (v instanceof Number n) {
+            return n.doubleValue();
+        }
         if (v instanceof String s) {
-            try { return Double.parseDouble(s); } catch (NumberFormatException e) { return def; }
+            try {
+                return Double.parseDouble(s);
+            } catch (NumberFormatException e) {
+                return def;
+            }
         }
         return def;
     }
-
 }
